--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -1,18 +1,9 @@
-  <footer class="footer py-4 fixed-bottom">
+  <footer class="footer">
     <div class="container-fluid">
       <div class="row align-items-center justify-content-lg-between">
-        <div class="col-lg-6 mb-lg-0 mb-4">
+        <div class="col-lg-12 mb-lg-0 mb-4">
           <div class="copyright text-center text-sm text-muted text-lg-left">
-            &copy;  2021 -  <a target="_blank" href="http://www.atrotech.ir/">Atrotech</a>.
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-            <li class="nav-item">
-              <a href="http://www.atrotech.ir/"
-                 class="nav-link text-muted" target="_blank"> افق سازان فناوری آترو ( آتـــروتـک ) </a>
-            </li>
-          </ul>
+            &copy;  2021 -  <a target="_blank" href="http://www.atrotech.ir/">Atrotech</a>. 
         </div>
       </div>
     </div>
