--- a/apps/templates/home/order_req_detail.html
+++ b/apps/templates/home/order_req_detail.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/base.html' %}
+{% load humanize %}
 
 {% block title %} {{ req }} {% endblock title %}
 
@@ -77,19 +78,19 @@
                         <p class="text-xs text-secondary mb-0"> {{ req.qty }} عدد </p>
                       </td>
                       <td class="align-middle text-center">
-                        <p class="text-xs text-secondary mb-0"> {{ req.product.price }} ریال</p>
+                        <p class="text-xs text-secondary mb-0"> {{ req.product.price|intcomma:False }} ریال</p>
                       </td>
                       <td class="align-middle text-center">
                         <p class="text-xs text-secondary mb-0"> {{ req.discount }} ٪ </p>
                       </td>
                       <td class="align-middle text-center">
-                        <p class="text-xs text-secondary mb-0"> {{ total_price }} ریال </p>
+                        <p class="text-xs text-secondary mb-0"> {{ total_price|floatformat:0|intcomma:False }} ریال </p>
                       </td>
                       <td class="align-middle text-center">
-                        <p class="text-xs text-secondary mb-0"> {{ total_incoming }} ریال </p>
+                        <p class="text-xs text-secondary mb-0"> {{ total_incoming|floatformat:0|intcomma:False }} ریال </p>
                       </td>
                       <td class="align-middle text-center">
-                        <p class="text-xs text-secondary mb-0"> {{ remained }} ریال </p>
+                        <p class="text-xs text-secondary mb-0"> {{ remained|floatformat:0|intcomma:False }} ریال </p>
                       </td>
                     </tr>
                   </tbody>
@@ -160,7 +161,7 @@
                   <div class="card h-100 card-plain border">
                     <div class="card-body d-flex flex-column justify-content-center text-center">
                       <button class="btn btn-icon-only btn-rounded btn-outline-success btn-sm d-flex align-items-center justify-content-center"><i class="fas fa-arrow-down" aria-hidden="true"></i></button>
-                      <h5 class=" text-secondary"> {{ Order_incomings.amount }} ریال </h5>
+                      <h5 class=" text-secondary"> {{ Order_incomings.amount|floatformat:0|intcomma:False }} ریال </h5>
                       <p class="text-lg mb-1 pt-2 text-bold" dir="ltr"> <i class="far fa-calendar-alt me-2"></i> <small> {{ Order_incomings.date_created|date:'Y-m-d' }} </small> </p>
                     </div>
                   </div>
