--- a/apps/templates/home/products.html
+++ b/apps/templates/home/products.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/base.html' %}
+{% load humanize %}
 
 {% block title %} محصولات {% endblock title %}
 
@@ -47,7 +48,7 @@
                       {% endif %}
                     </td>
                     <td class="align-middle text-center">
-                      <span class="text-secondary text-xs font-weight-bold"> {{ Product.price }} ریال </span>
+                      <span class="text-secondary text-xs font-weight-bold"> {{ Product.price|floatformat:0|intcomma:False  }} ریال </span>
                     </td>
                     <td class="align-middle text-center">
                       <div>
